# davis-wx

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  build-deb.sh  davis-wx.service  docker-compose.yml  install.sh  station.py
backend/: logger_main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: astronomy.py  config.py  current.py  export.py  forecast.py  history.py  nowcast.py  router.py  setup.py  spray.py  station.py  usage.py  weatherlink.py
backend/app/ipc/: server.py
backend/app/models/: database.py  nowcast.py  sensor_reading.py  spray.py
backend/app/protocol/: constants.py  link_driver.py  memory_map.py  station_types.py
backend/app/schemas/: forecast.py
backend/app/services/: alerts_nws.py  aprs_collector.py  cwop.py  forecast_nws.py  nearby_stations.py  nowcast_analyst.py  nowcast_collector.py  nowcast_service.py  nowcast_verifier.py  poller.py  spray_engine.py  wunderground.py
backend/app/ws/: handler.py
debian/: changelog  conffiles  control  davis-wx-logger.service  davis-wx-web.service  davis-wx.conf  davis-wx.desktop  postinst  postrm  prerm  rules
docs/: DOCUMENTATION_DIRECTIVE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: PWAUpdatePrompt.tsx  WeatherBackground.tsx
frontend/src/context/: ThemeContext.tsx  WeatherBackgroundContext.tsx  WeatherDataContext.tsx
frontend/src/dashboard/: DashboardGrid.tsx  DashboardLayoutContext.tsx  SortableTile.tsx  (+2 more)
(+31 files in other folders)
